--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Great Idea - Responsive I</title>
 
   <link href="https://fonts.googleapis.com/css?family=Bangers|Titillium+Web" rel="stylesheet">
@@ -15,23 +16,33 @@
 <div class="container">
 
   <header>
-    <nav>
-      <a href="services.html">Services</a>
-      <a href="#">Product</a>
-      <a href="#">Vision</a>
-      <a href="#">Features</a>
-      <a href="#">About</a>
-      <a href="#">Contact</a>
-    </nav>
-    <img class="logo" src="https://tk-assets.lambdaschool.com/c7e8c14d-d7ad-4d21-9c18-4a68c77e5ad5_logo.png" alt="Great Idea! Company logo.">
+
+    <section class="nav-sec">
+      <div class="mainlogo">
+        <img class="logo-tab" src="https://tk-assets.lambdaschool.com/c7e8c14d-d7ad-4d21-9c18-4a68c77e5ad5_logo.png" alt="Company logo.">
+      </div>
+      <nav>
+        <a href="services.html">Services</a>
+        <a href="#">Product</a>
+        <a href="#">Vision</a>
+        <a href="#">Features</a>
+        <a href="#">About</a>
+        <a href="#">Contact</a>
+      </nav>
+      <img class="logo" src="https://tk-assets.lambdaschool.com/c7e8c14d-d7ad-4d21-9c18-4a68c77e5ad5_logo.png" alt="Great Idea! Company logo.">
+  </section>
   </header>
 
   <section class="cta">
-    <div class="cta-text">
-      <h1>Innovation<br> On<br> Demand</h1>
-      <button>Get Started</button>
-    </div>
-    <img src="img/header-img.png" alt="Image of a code snippet.">
+      <div class="cta-text">
+        <h1>Innovation<br> On<br> Demand</h1>
+        <button>Get Started</button>
+      </div>
+
+      
+        <img class="cta-img" src="img/header-img.png" alt="Image of a code snippet.">
+      
+
   </section>
 
   <section class="main-content">
